# opennet-wap-testing

./: .env.example  .gitignore  README.md  pyproject.toml  run-emulator-tests.sh
config/: config.py
docs/: ELEMENT_INSPECTION_GUIDE.md  EMULATOR_QUICKSTART.md  EXTERNAL_INSPECTION_TOOLS.md  FRAMEWORK_SUMMARY.txt  GETTING_STARTED.md  NAVIGATION.md  NEXT_STEPS.txt  OVERVIEW.md  QUICK_INSPECTION_GUIDE.md  README.md  REAL_EMULATOR_GUIDE.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md
drivers/: driver_factory.py
pages/: base_page.py  twitch_page.py
tests/: conftest.py
tests/twitch/: test_search.py
tools/: verify_setup.py
